# aoc

./: .gitignore  pyproject.toml
2024/day2/: p1.py
2024/day3/: p1.py  p2.py
day1/: p1.py  p2.py
day2/: p1.py  p2.py
day3/: p1.py  p2.py
day4/: p1.py  p2.py
